# cbrust

./: Cargo.toml  README.md
cbcli/: Cargo.toml
cbcli/src/: main.rs
cbprotolib/: Cargo.toml  build.rs
cbprotolib/proto/: cbservice.proto
cbprotolib/src/: lib.rs
cbserver/: Cargo.toml  build.rs
cbserver/src/: main.rs  maintainer.rs  service.rs
proto/: cbservice.proto
sql/: createdb.sql
