[package]
name = "cbcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbprotolib = { path = "../cbprotolib" }
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "*"
